# ALEC

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
agents/alec/: .env.example  .env.production  README.md  WEAVE_SETUP.md  pyproject.toml
agents/alec/knowledge/: user_preference.txt  user_profiles.md
agents/alec/src/alec/: crew.py  main.py
agents/alec/src/alec/config/: agents.yaml  tasks.yaml
backend/: main.py  pyproject.toml  requirements.txt  speech_to_ipa.py
frontend/: index.html
frontend/src/: App.css  App.tsx  index.css
src/alec/: __init__.py  crew.py  main.py
src/alec/config/: tasks.yaml
