[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "callaghanc",email = "cat.callaghan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "allosaurus @ git+https://github.com/xinjli/allosaurus.git@interspeech21",
    "torchaudio (>=2.7.1,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
